--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -17,8 +17,8 @@
         "userName-placeholder":"用户名4到32个字符",
         "nickName":"昵称：",
         "nickName-placeholder":"昵称2到32个字符",
-        "email":"常用邮箱：",
-        "email-placeholder":"常用邮箱，验证后才能登录",
+        "email":"邮箱：",
+        "email-placeholder":"常用邮箱",
         "notice":"【如果您未在收件箱收到验证邮件，请到垃圾箱查收。】",
         "password":"密码：",
         "password-placeholder":"密码，至少8位",
